<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_group_data"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_data_manage"
            app:actionLayout="@layout/custom_tint_view"
            android:icon="@mipmap/ic_data_manage"
            android:title="@string/drawer_data_manage" />
        <item
            android:id="@+id/drawer_data_updating"
            android:icon="@mipmap/ic_data_update"
            android:title="@string/drawer_data_updating" />

        <item
            android:id="@+id/drawer_data_query"
            android:icon="@mipmap/ic_data_query"
            android:title="@string/drawer_data_query" />

        <item
            android:id="@+id/drawer_spot_check"
            android:icon="@mipmap/ic_spot_check"
            android:title="@string/drawer_spot_check" />
        <item
            android:id="@+id/drawer_card_reader"
            android:icon="@mipmap/ic_card_reader"
            android:title="@string/drawer_card_reader" />
        <item
            android:id="@+id/drawer_account_manage"
            android:icon="@mipmap/ic_account_manager"
            android:title="@string/drawer_account_manage" />
        <item
            android:id="@+id/drawer_about"
            android:icon="@mipmap/ic_about"
            android:title="@string/drawer_about" />

    </group>

</menu>
