<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
        <item>中添加属性android：icon 设置图标
    -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_data_manage"
            android:title="@string/drawer_data_manage"
            android:icon="@mipmap/icon_data_manage"
            />
        <item
            android:id="@+id/drawer_data_updating"
            android:title="@string/drawer_data_updating"
            android:icon="@mipmap/icon_data_updating"/>
        <item
            android:id="@+id/drawer_data_query"
            android:title="@string/drawer_data_query"
            android:icon="@mipmap/icon_data_query"/>



        <item
            android:id="@+id/drawer_setting"
            android:title="@string/drawer_setting"
            android:icon="@mipmap/icon_setting"/>
        <item
            android:id="@+id/drawer_about"
            android:title="@string/drawer_about"
            android:icon="@mipmap/icon_about"/>
        <item
            android:id="@+id/drawer__exit"
            android:title="@string/drawer_exit"
            android:icon="@mipmap/icon_exit"/>


    </group>


</menu>
