<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/color_measure_title_bg"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/measure_title_machine"
                    android:textColor="@color/color_measure_title_text"
                    android:textSize="@dimen/font_normal"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:background="@color/color_measure_title_divider">

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/measure_title_measure_item"
                    android:textColor="@color/color_measure_title_text"
                    android:textSize="@dimen/font_normal"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:background="@color/color_measure_title_divider">

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/measure_title_part"
                    android:textColor="@color/color_measure_title_text"
                    android:textSize="@dimen/font_normal"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:background="@color/color_measure_title_divider">

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/measure_title_numerical"
                    android:textColor="@color/color_measure_title_text"
                    android:textSize="@dimen/font_normal"
                    />
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_fab_plus"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:backgroundTint="@color/colorPrimary"
        />
</FrameLayout>